# trellis

./: CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md
.github/workflows/: frontend.yml
cli/trellis_cli/: Cargo.toml
cli/trellis_cli/src/: config.rs  main.rs  rpc.rs  utils.rs
cli/trellis_cli/src/commands/: mod.rs
contracts/trellis_core/: Cargo.toml
contracts/trellis_core/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/trellis_core/test_snapshots/test/: test_cancel_unfunded_milestone.1.json  test_dispute_and_refund_to_payer.1.json  test_double_init_fails.1.json  test_get_agreement.1.json  test_happy_path.1.json
frontend/: .env.example  dev_out.txt  dev_output.txt  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgreementIdGenerator.tsx  CopyableAddress.tsx  ExplorerLink.tsx  HowItWorks.tsx  Navbar.tsx  NetworkBackground.tsx  NetworkStatus.tsx  ScrollReveal.tsx  StatsBar.tsx  ToastContainer.tsx  TypingText.tsx
frontend/src/components/skeletons/: AgreementCardSkeleton.tsx  ButtonSkeleton.tsx  EventFeedSkeleton.tsx  NavbarSkeleton.tsx  (+2 more)
frontend/src/context/: ThemeContext.tsx  ToastContext.tsx  theme.ts  useTheme.ts
frontend/src/hooks/: useContractStats.ts  useCopyToClipboard.ts  useCountUp.ts  useScrollReveal.ts  useStellarStatus.ts  useToast.ts  useTypingAnimation.ts
frontend/src/lib/: config.ts  explorer.ts
frontend/src/pages/: AgreementDetailPage.tsx  AgreementStatusPage.tsx  CreateAgreementPage.tsx  HomePage.tsx  NotFoundPage.tsx
